# satellite-temperature-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: classroom.yml
include/: app_support.h  simulation_core.h
src/: app_support.cpp  main.cpp  simulation_core.cpp
tests/: checks.py  run_tests.py
tests/configs/: force_faults.ini  real_noise.ini  zero_variance.ini
